--- a/la sale/package.json
+++ b/la sale/package.json
@@ -1,7 +1,6 @@
 {
   "name": "la-sale",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,6 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.3",
     "hbs": "^4.1.0"
-  }
+  },
+  "description": ""
 }
