added folders  + mongoose

--- a/la sale/package.json
+++ b/la sale/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "handlebars": "^4.7.3",
-    "hbs": "^4.1.0"
+    "hbs": "^4.1.0",
+    "mongoose": "^5.9.7",
+    "validator": "^13.0.0"
   },
   "description": ""
 }
