--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/ccapdev1920T2/s12g5/issues"
   },
-  "homepage": "https://github.com/ccapdev1920T2/s12g5#readme"
+  "homepage": "https://github.com/ccapdev1920T2/s12g5#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
