--- a/la sale/package.json
+++ b/la sale/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "handlebars": "^4.7.3",
     "hbs": "^4.1.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.9.7",
     "validator": "^13.0.0"
   },
