--- a/la sale/package.json
+++ b/la sale/package.json
@@ -8,7 +8,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
+    "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "handlebars": "^4.7.3",
     "hbs": "^4.1.0",
     "moment": "^2.24.0",
