--- a/la sale/package.json
+++ b/la sale/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "handlebars": "^4.7.3",
     "hbs": "^4.1.0",
     "moment": "^2.24.0",
