--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "handlebars": "^4.7.3",
     "hbs": "^4.1.0",
     "moment": "^2.24.0",
+    "mongodb": "^3.5.6",
     "mongoose": "^5.9.7",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
